# tradingview-screener

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: plan.md
src/: __init__.py  config.py  email_client.py  run.py  screeners.py  sheet_client.py  telegram_client.py
